RESOLVED FIXED129714
Get position:fixed working slightly better on iOS WK2
https://bugs.webkit.org/show_bug.cgi?id=129714
Summary Get position:fixed working slightly better on iOS WK2
Simon Fraser (smfr)
Reported 2014-03-04 16:26:18 PST
Get position:fixed working slightly better on iOS
Attachments
Patch (10.79 KB, patch)
2014-03-04 16:29 PST, Simon Fraser (smfr)
benjamin: review+
Simon Fraser (smfr)
Comment 1 2014-03-04 16:29:23 PST
WebKit Commit Bot
Comment 2 2014-03-04 16:31:05 PST
Attachment 225830 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2014-03-08 21:00:47 PST
Note You need to log in before you can comment on or make changes to this bug.